--- a/mptt_practice/templates/index.html
+++ b/mptt_practice/templates/index.html
@@ -1,1 +1,17 @@
-<p>hello world</p>
+{% extends 'base.html' %}
+{% load mptt_tags %}
+{% block content %}
+
+<ul class="root">
+    {% recursetree nodes %}
+        <li>
+            {{ node.name }}
+            {% if not node.is_leaf_node %}
+                <ul class="children">
+                    {{ children }}
+                </ul>
+            {% endif %}
+        </li>
+    {% endrecursetree %}
+</ul>
+{% endblock %}
